--- a/九宫格抽奖.html
+++ b/九宫格抽奖.html
@@ -4,6 +4,7 @@
     <title>九宫格抽奖</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta name="apple-mobile-web-app-capable" content="yes"/>
     <link href="data/apple-touch-icon.png" rel="apple-touch-icon"/>
     <link href="resources/css/jquery-ui-themes.css" type="text/css" rel="stylesheet"/>
