--- a/活动已开始.html
+++ b/活动已开始.html
@@ -1148,7 +1148,7 @@
       </div>
 
       <!-- Unnamed (组合) -->
-      <div id="u319" class="ax_default" data-left="0" data-top="29" data-width="402" data-height="841">
+      <div id="u319" class="ax_default ax_default_hidden" style="display:none; visibility: hidden" data-left="0" data-top="0" data-width="0" data-height="0">
 
         <!-- Unnamed (矩形) -->
         <div id="u320" class="ax_default box_3">
