--- a/活动已开始.html
+++ b/活动已开始.html
@@ -38,7 +38,7 @@
 
       <!-- Unnamed (占位符) -->
       <div id="u168" class="ax_default placeholder">
-        <img id="u168_img" class="img " src="images/活动未开始/u3.png"/>
+        <img id="u168_img" class="img " src="images/活动已开始/u168.png"/>
       </div>
 
       <!-- Unnamed (矩形) -->
@@ -92,7 +92,7 @@
 
       <!-- Unnamed (水平线) -->
       <div id="u175" class="ax_default line">
-        <img id="u175_img" class="img " src="images/活动未开始/u10.png"/>
+        <img id="u175_img" class="img " src="images/活动已开始/u175.png"/>
       </div>
 
       <!-- Unnamed (矩形) -->
@@ -105,12 +105,12 @@
 
       <!-- Unnamed (水平线) -->
       <div id="u177" class="ax_default line">
-        <img id="u177_img" class="img " src="images/活动未开始/u10.png"/>
+        <img id="u177_img" class="img " src="images/活动已开始/u175.png"/>
       </div>
 
       <!-- Unnamed (水平线) -->
       <div id="u178" class="ax_default line">
-        <img id="u178_img" class="img " src="images/活动未开始/u10.png"/>
+        <img id="u178_img" class="img " src="images/活动已开始/u175.png"/>
       </div>
 
       <!-- Unnamed (矩形) -->
@@ -395,7 +395,7 @@
 
       <!-- Unnamed (占位符) -->
       <div id="u218" class="ax_default placeholder">
-        <img id="u218_img" class="img " src="images/活动未开始/u49.png"/>
+        <img id="u218_img" class="img " src="images/活动已开始/u218.png"/>
         <div id="u218_text" class="text ">
           <p><span>50元</span></p><p><span>商城立减券</span></p>
         </div>
@@ -403,7 +403,7 @@
 
       <!-- Unnamed (占位符) -->
       <div id="u219" class="ax_default placeholder">
-        <img id="u219_img" class="img " src="images/活动未开始/u49.png"/>
+        <img id="u219_img" class="img " src="images/活动已开始/u218.png"/>
         <div id="u219_text" class="text ">
           <p><span>128元</span></p><p><span>会员回馈金</span></p>
         </div>
@@ -411,7 +411,7 @@
 
       <!-- Unnamed (占位符) -->
       <div id="u220" class="ax_default placeholder">
-        <img id="u220_img" class="img " src="images/活动未开始/u48.png"/>
+        <img id="u220_img" class="img " src="images/活动已开始/u220.png"/>
         <div id="u220_text" class="text ">
           <p><span>100元</span></p><p><span>话费券</span></p>
         </div>
@@ -444,8 +444,10 @@
 
       <!-- Unnamed (Connector) -->
       <div id="u224" class="ax_default connector">
-        <img id="u224_seg0" class="img " src="images/活动已开始/u223_seg0.png" alt="u224_seg0"/>
-        <img id="u224_seg1" class="img " src="images/活动已开始/u223_seg1.png" alt="u224_seg1"/>
+        <img id="u224_seg0" class="img " src="images/活动已开始/u224_seg0.png" alt="u224_seg0"/>
+        <img id="u224_seg1" class="img " src="images/活动已开始/u224_seg1.png" alt="u224_seg1"/>
+        <img id="u224_seg2" class="img " src="images/活动已开始/u224_seg2.png" alt="u224_seg2"/>
+        <img id="u224_seg3" class="img " src="images/活动已开始/u223_seg1.png" alt="u224_seg3"/>
         <div id="u224_text" class="text ">
           <p><span>解锁</span></p>
         </div>
@@ -464,6 +466,7 @@
       <div id="u226" class="ax_default connector">
         <img id="u226_seg0" class="img " src="images/活动已开始/u226_seg0.png" alt="u226_seg0"/>
         <img id="u226_seg1" class="img " src="images/活动已开始/u226_seg1.png" alt="u226_seg1"/>
+        <img id="u226_seg2" class="img " src="images/活动已开始/u226_seg2.png" alt="u226_seg2"/>
         <div id="u226_text" class="text ">
           <p><span>解锁</span></p>
         </div>
@@ -471,8 +474,9 @@
 
       <!-- Unnamed (Connector) -->
       <div id="u227" class="ax_default connector">
-        <img id="u227_seg0" class="img " src="images/活动已开始/u226_seg0.png" alt="u227_seg0"/>
-        <img id="u227_seg1" class="img " src="images/活动已开始/u226_seg1.png" alt="u227_seg1"/>
+        <img id="u227_seg0" class="img " src="images/活动已开始/u227_seg0.png" alt="u227_seg0"/>
+        <img id="u227_seg1" class="img " src="images/活动已开始/u227_seg1.png" alt="u227_seg1"/>
+        <img id="u227_seg2" class="img " src="images/活动已开始/u226_seg2.png" alt="u227_seg2"/>
         <div id="u227_text" class="text ">
           <p><span>解锁</span></p>
         </div>
@@ -480,8 +484,9 @@
 
       <!-- Unnamed (Connector) -->
       <div id="u228" class="ax_default connector">
-        <img id="u228_seg0" class="img " src="images/活动已开始/u226_seg0.png" alt="u228_seg0"/>
-        <img id="u228_seg1" class="img " src="images/活动已开始/u226_seg1.png" alt="u228_seg1"/>
+        <img id="u228_seg0" class="img " src="images/活动已开始/u228_seg0.png" alt="u228_seg0"/>
+        <img id="u228_seg1" class="img " src="images/活动已开始/u228_seg1.png" alt="u228_seg1"/>
+        <img id="u228_seg2" class="img " src="images/活动已开始/u228_seg2.png" alt="u228_seg2"/>
         <div id="u228_text" class="text ">
           <p><span>解锁</span></p>
         </div>
@@ -505,7 +510,7 @@
 
       <!-- Unnamed (水平线) -->
       <div id="u231" class="ax_default line">
-        <img id="u231_img" class="img " src="images/活动未开始/u10.png"/>
+        <img id="u231_img" class="img " src="images/活动已开始/u175.png"/>
       </div>
 
       <!-- Unnamed (矩形) -->
@@ -518,7 +523,7 @@
 
       <!-- Unnamed (水平线) -->
       <div id="u233" class="ax_default line">
-        <img id="u233_img" class="img " src="images/活动未开始/u15.png"/>
+        <img id="u233_img" class="img " src="images/活动已开始/u233.png"/>
       </div>
 
       <!-- Unnamed (矩形) -->
@@ -537,7 +542,7 @@
       </div>
 
       <!-- Unnamed (组合) -->
-      <div id="u237" class="ax_default" data-left="17" data-top="1239" data-width="106" data-height="48">
+      <div id="u237" class="ax_default" data-left="16" data-top="1153" data-width="106" data-height="46">
 
         <!-- Unnamed (矩形) -->
         <div id="u238" class="ax_default _三级标题">
@@ -557,7 +562,7 @@
       </div>
 
       <!-- Unnamed (组合) -->
-      <div id="u240" class="ax_default" data-left="152" data-top="1234" data-width="92" data-height="48">
+      <div id="u240" class="ax_default" data-left="141" data-top="1148" data-width="92" data-height="46">
 
         <!-- Unnamed (矩形) -->
         <div id="u241" class="ax_default _三级标题">
@@ -577,7 +582,7 @@
       </div>
 
       <!-- Unnamed (组合) -->
-      <div id="u243" class="ax_default" data-left="277" data-top="1239" data-width="99" data-height="48">
+      <div id="u243" class="ax_default" data-left="258" data-top="1153" data-width="99" data-height="46">
 
         <!-- Unnamed (矩形) -->
         <div id="u244" class="ax_default _三级标题">
@@ -637,7 +642,7 @@
 
       <!-- Unnamed (水平线) -->
       <div id="u252" class="ax_default line">
-        <img id="u252_img" class="img " src="images/活动未开始/u10.png"/>
+        <img id="u252_img" class="img " src="images/活动已开始/u175.png"/>
       </div>
 
       <!-- Unnamed (矩形) -->
@@ -650,7 +655,7 @@
 
       <!-- Unnamed (水平线) -->
       <div id="u254" class="ax_default line">
-        <img id="u254_img" class="img " src="images/活动未开始/u15.png"/>
+        <img id="u254_img" class="img " src="images/活动已开始/u233.png"/>
       </div>
 
       <!-- Unnamed (矩形) -->
@@ -787,7 +792,7 @@
 
       <!-- Unnamed (椭圆形) -->
       <div id="u273" class="ax_default marker">
-        <img id="u273_img" class="img " src="images/活动未开始/u81.png"/>
+        <img id="u273_img" class="img " src="images/活动已开始/u273.png"/>
         <div id="u273_text" class="text ">
           <p><span>8</span></p>
         </div>
